after add models

--- a/Brrow_Book/E_book_library_management_system/templates/E_book_library_management_system/base2.html
+++ b/Brrow_Book/E_book_library_management_system/templates/E_book_library_management_system/base2.html
@@ -64,7 +64,15 @@
         <class="btn-disabled">
 
         </class>
+        {% block book_page %}
+    
+        {% endblock %}
+
         {% block page %}
+    
+        {% endblock %}
+
+        {% block my_book_page %}
     
         {% endblock %}
 </body>
