--- a/Borrow_Book/E_book_library_management_system/templates/E_book_library_management_system/profile.html
+++ b/Borrow_Book/E_book_library_management_system/templates/E_book_library_management_system/profile.html
@@ -13,10 +13,13 @@
         .alert{
             color: red;
         }
+        
     </style>
-    <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static 'images/book-icon.jpg' %}" style="height:50px; width:50px; border-radius:50%; margin-top: -18px">
-    </a>
+
+    <!-- Navigation -->
+    
+
+    <!-- end nav -->
 
     <div style = "text-align: center;" color = "lightblue">
         <h1 style = "color: rgb(33, 128, 160)"> My Profile </h1>
