--- a/Borrow_Book/E_book_library_management_system/templates/E_book_library_management_system/base2.html
+++ b/Borrow_Book/E_book_library_management_system/templates/E_book_library_management_system/base2.html
@@ -88,7 +88,11 @@
             <a class = "nav-link" href="{% url 'donate' %}"> Donate Book </a>
             <a class = "nav-link" href="{% url 'Review' %}"> Review </a>
             <a class = "nav-link" href="{% url 'choose_plan' %}"> Payment </a>    
-            <a class = "nav-link" href="{% url 'signout' %}"> Sign Out </a>
+            {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'signout' %}"> Sign Out </a>
+            {%else %}
+            <a class="nav-link" href="{% url 'login' %}"> Sign In </a>
+            {%endif %}
             <div style="padding-left: 330px;">
                 <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}" method="POST">
                     {% csrf_token %}
