--- a/Borrow_Book/E_book_library_management_system/templates/E_book_library_management_system/base3.html
+++ b/Borrow_Book/E_book_library_management_system/templates/E_book_library_management_system/base3.html
@@ -28,7 +28,11 @@
             <a class = "nav-link" href="{% url 'donate' %}"> Donate Book </a>
             <a class = "nav-link" href="{% url 'Post' %}"> Add Review </a>
             <a class = "nav-link" href="{% url 'choose_plan' %}"> Payment </a> 
-            <a class = "nav-link" href="{% url 'signout' %}"> Sign Out </a>
+            {% if user.is_authenticated %}
+            <a class="nav-link" href="{% url 'signout' %}"> Sign Out </a>
+            {%else %}
+            <a class="nav-link" href="{% url 'login' %}"> Sign In </a>
+            {%endif %}
         </div>
     </nav><br>
     {% block header %}
