--- a/Borrow_Book/E_book_library_management_system/templates/E_book_library_management_system/home.html
+++ b/Borrow_Book/E_book_library_management_system/templates/E_book_library_management_system/home.html
@@ -10,21 +10,18 @@
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
-    />
+    >
     <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
-    />
+    >
 
     <!--Fontawesome CDN-->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
-    />
+    >
     <title>Borrow Books</title>
   </head>
 
@@ -72,31 +69,15 @@
           <a class="nav-link" href="{% url 'login' %}"> Sign In </a>
           {%endif %}
           <div style="padding-left: 330px;">
-            <form
-              class="form-inline my-2 my-lg-0"
-              action="{% url 'search' %}"
-              method="POST"
-            >
-              {% csrf_token %}
-              <input
-                class="form-control mr-sm-2"
-                type="text"
-                name="search"
-                placeholder="Search By Name"
-                aria-label="Search"
-                required
-              />
-              <button
-                class="btn btn-outline-success my-2 my-sm-0"
-                type="submit"
-              >
-                Search
-              </button>
+            <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}"method="POST">
+            {% csrf_token %}
+              <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search By Name" aria-label="Search"required>
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Search</button>
             </form>
           </div>
         </div>
       </nav>
-      <br />
+      <br>
     </header>
 
     <!-- Main -->
